Actualización Edge index.html

--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
     <span>© 2025 Institución Educativa</span>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=8"></script>
 </body>
 </html>
